@@ -6,10 +6,8 @@
 # Permission is given to use this file in any way.
 
 DEPSMODE=@DEPSMODE@
-DEPSDIR=.deps
 DEPSFLAG="@DEPSFLAG@"
-
-mkdir -p $DEPSDIR
+DEPSDIRBASE=.deps
 
 if test $DEPSMODE = gcc ; then
     $* ${DEPSFLAG}
@@ -30,9 +28,13 @@ if test $DEPSMODE = gcc ; then
         esac
         shift
     done
+    objfilebase=`basename $objfile`
+    builddir=`dirname $objfile`
     depfile=`basename $srcfile | sed -e 's/\..*$/.d/g'`
     depobjname=`echo $depfile |sed -e 's/\.d/.o/g'`
-    
+    depsdir=$builddir/$DEPSDIRBASE
+    mkdir -p $depsdir
+
     # if the compiler failed, we're done:
     if test ${status} != 0 ; then
         rm -f $depfile
@@ -41,21 +43,23 @@ if test $DEPSMODE = gcc ; then
 
     # move created file to the location we want it in:
     if test -f $depfile ; then
-        sed -e "s,$depobjname:,$objfile:,g" $depfile >${DEPSDIR}/${objfile}.d
+        sed -e "s,$depobjname:,$objfile:,g" $depfile >${depsdir}/${objfilebase}.d
         rm -f $depfile
     else
         # "g++ -MMD -o fooobj.o foosrc.cpp" produces fooobj.d
-        depfile=`basename $objfile | sed -e 's/\..*$/.d/g'`
+        depfile=`echo "$objfile" | sed -e 's/\..*$/.d/g'`
         if test ! -f $depfile ; then
             # "cxx -MD -o fooobj.o foosrc.cpp" creates fooobj.o.d (Compaq C++)
             depfile="$objfile.d"
         fi
         if test -f $depfile ; then
-            sed -e "/^$objfile/!s,$depobjname:,$objfile:,g" $depfile >${DEPSDIR}/${objfile}.d
+            cat $depfile
+            sed -e "\,^$objfile,!s,$depobjname:,$objfile:,g" $depfile >${depsdir}/${objfilebase}.d
             rm -f $depfile
         fi
     fi
     exit 0
+
 elif test $DEPSMODE = mwcc ; then
     $* || exit $?
     # Run mwcc again with -MM and redirect into the dep file we want
@@ -75,8 +79,15 @@ elif test $DEPSMODE = mwcc ; then
         fi
         prevarg="$arg"
     done
-    $* $DEPSFLAG >${DEPSDIR}/${objfile}.d
+    
+    objfilebase=`basename $objfile`
+    builddir=`dirname $objfile`
+    depsdir=$builddir/$DEPSDIRBASE
+    mkdir -p $depsdir
+
+    $* $DEPSFLAG >${depsdir}/${objfilebase}.d
     exit 0
+
 elif test $DEPSMODE = unixcc; then
     $* || exit $?
     # Run compiler again with deps flag and redirect into the dep file.
@@ -97,8 +108,15 @@ elif test $DEPSMODE = unixcc; then
         esac
         shift
     done
-    eval "$cmd $DEPSFLAG" | sed "s|.*:|$objfile:|" >${DEPSDIR}/${objfile}.d
+    
+    objfilebase=`basename $objfile`
+    builddir=`dirname $objfile`
+    depsdir=$builddir/$DEPSDIRBASE
+    mkdir -p $depsdir
+    
+    eval "$cmd $DEPSFLAG" | sed "s|.*:|$objfile:|" >${DEPSDIR}/${objfilebase}.d
     exit 0
+
 else
     $*
     exit $?
