@@ -75,6 +75,6 @@ else: condstr='@COND_%s@' % t.cond.name
 @[end for]@
 
 # Include dependency info, if present:
-@@IF_GNU_MAKE@@-include .deps/*.d
+@@IF_GNU_MAKE@@-include @BUILDDIR/.deps/*.d
 
 .PHONY: @(' '.join([t.__targetdir+t.__targetname for t in targets if t.__is_phony=='1']))
